syntax = "proto3";

import "google/protobuf/timestamp.proto";

package EVMContractCreation.v1;

message EVMContractCreations {
  repeated ContractCreationInfo data = 1;
}

message ContractCreationInfo {
  string block_hash = 1;
  uint64 block_number = 2;
  uint64 block_timestamp_seconds = 3;
  string contract_address = 4;
  string creator_address = 5;
  string creator_factory = 6;
  string creator_tx = 7;
  bytes contract_init_bytecode = 8;
  bytes contract_bytecode = 9;
}